# ROS-pick-and-place-waste-sorting

./: .gitignore  README.md
chapter_4_runs/: cpp_yolov5n-v7-coco-onnx_20260309_041445.json  cpp_yolov5s-v7-coco-onnx_20260309_040726.json  cpp_yolov8n-coco_20260309_142335.json  cpp_yolov8s-coco_20260309_151241.json  python_yolov5s-v7-coco_20260309_052630.txt  python_yolov8n-coco_20260309_051037.txt
results/chapter_4/: cpp_yolov5n-v7-coco-onnx_20260309_041445.txt  cpp_yolov5s-v7-coco-onnx_20260309_040726.txt  cpp_yolov8n-coco_20260309_142335.txt  cpp_yolov8s-coco_20260309_151241.txt  python_yolov5n-v7-coco-onnx_20260309_055014.json  python_yolov5n-v7-coco-onnx_20260309_055014.txt  python_yolov5s-v7-coco_20260309_052630.json  python_yolov8n-coco_20260309_051037.json  python_yolov8s-coco_20260309_155249.json  python_yolov8s-coco_20260309_155249.txt
results/chapter_5/: metrics_inference_2026-03-13_15-44-35.txt  metrics_pnp_2026-03-13_14-44-17.txt
ros_ws/: workspace.sh
ros_ws/src/: README.md
ros_ws/src/ax_inference_node_cpp/: CMakeLists.txt  package.xml
ros_ws/src/ax_inference_node_cpp/launch/: inference_launch.py
ros_ws/src/ax_inference_node_cpp/src/: inference_node.cpp
ros_ws/src/ax_inference_node_python/: package.xml  setup.cfg  setup.py
ros_ws/src/ax_inference_node_python/ax_inference_node_python/: inference_node.py
ros_ws/src/ax_inference_node_python/ax_inference_node_python/launch/: inference.launch.py
ros_ws/src/helper_nodes/: package.xml  setup.cfg  setup.py
ros_ws/src/helper_nodes/helper_nodes/: camera_node.py  display_node.py  save_annotated_node.py  video_stream_node.py
ros_ws/src/helper_nodes/launch/: camera_node.launch.py
ros_ws/src/pick_and_place_description/launch/: start_control.launch.py
ros_ws/src/pick_and_place_moveit_config/launch/: start_moveit.launch.py
ros_ws/src/pick_and_place_simulation/launch/: start_simulation.launch.py
ros_ws/src/pick_and_place_simulation/models/box/: model.sdf
ros_ws/src/pick_and_place_simulation/models/box_green/: model.sdf
ros_ws/src/pick_and_place_simulation/models/box_red/: model.sdf
ros_ws/src/pick_and_place_simulation/models/box_yellow/: model.config  model.sdf
ros_ws/src/pick_and_place_simulation/world/: gym.world
ros_ws/src/pick_and_place_test_nodes/: CMakeLists.txt
ros_ws/src/pick_and_place_test_nodes/launch/: random_number_publisher.launch.py  start_pick_and_place.launch.py  start_vision_based_pick_and_place.launch.py
ros_ws/src/pick_and_place_test_nodes/src/: fake_camera_detector.cpp  random_number_publisher.cpp  test_pick_and_place.cpp  vision_based_pick_and_place.cpp
ros_ws/src/recycle_inference_node_cpp/: CMakeLists.txt  package.xml
ros_ws/src/recycle_inference_node_cpp/launch/: inference_launch.py
ros_ws/src/recycle_inference_node_cpp/src/: inference_node.cpp
ros_ws/src/yolo_detector_ros2/: README.md  RUN_DETECTOR.md  TRACKING_FEATURES.md  package.xml  setup.cfg  setup.py
ros_ws/src/yolo_detector_ros2/launch/: yolo_detector.launch.py
ros_ws/src/yolo_detector_ros2/yolo_detector_ros2/: yolo_detector_node.py
yolo_training/: README.md  phase_2.ipynb
