<?xml version="1.0"?>
<package format="3">
  <name>recycle_inference_node_cpp</name>
  <version>0.1.0</version>
  <description>C++ nodes for Use case demo</description>
  <maintainer email="jana.nikolovska@axelera.ai">ubuntu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
