<?xml version="1.0"?>
<package format="3">
  <name>yolo_detector_ros2</name>
  <version>0.0.1</version>
  <description>YOLO detector node for ROS2</description>
  <maintainer email="you@example.com">your_name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>

  <!-- cv_bridge is usually provided by ROS distro packages -->
  <exec_depend>cv_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>